27082021-1 : fixed media query bracketing overlap on 900px for Chromium engine

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -513,7 +513,7 @@ footer {
     }
 }
 
-@media screen and (min-width: 625px) and (max-width: 900px) {
+@media screen and (min-width: 625px) and (max-width: 899px) {
     %default-padding {padding: 20px 60px;}
     .restos__indv--new {right: 10%;}
 }
@@ -636,10 +636,10 @@ footer {
 
 /* Chromium engine styling */ 
 @supports (width:-webkit-fill-available) { 
-    @media screen and (min-width: 340px) and (max-width: 500px)
+    @media screen and (min-width: 340px) and (max-width: 499px)
     {.restos__indv--new {left: 76%;}}
-    @media screen and (min-width: 500px) and (max-width: 750px)
+    @media screen and (min-width: 500px) and (max-width: 749px)
     {.restos__indv--new {left: 84%;}}
-    @media screen and (min-width: 750px) and (max-width: 900px)
+    @media screen and (min-width: 750px) and (max-width: 899px)
     {.restos__indv--new {left: 88%;}}
 }
